# auto-researcher-chatuskoti

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-torch.txt
artifacts/: index.md
artifacts/strong_v1/: manifest.json
artifacts/strong_v1/ablations/: manifest.json  summary.json  summary.md
artifacts/strong_v1/canonical_failure/: manifest.json
artifacts/strong_v1/challenge_compare/: challenge_cases.md  manifest.json
artifacts/strong_v1_1_torch/ablations/: manifest.json  summary.md
artifacts/torch_challenge_compare_v3/: comparison.md
catuskoti_ar/: __init__.py  actions.py  benchmark.py  cli.py  config.py  models.py  proposals.py  reporting.py  resolver.py  runner.py  scoring.py  torch_backend.py  wisdom.py
chatuskoti_evals/: __init__.py  actions.py  benchmark.py  cli.py  config.py  models.py  proposals.py  reporting.py  resolver.py  runner.py  scenarios.py  scoring.py  torch_backend.py  wisdom.py
docs/: canonical_failure_benchmark.md  demo.md  failure_injection_set.md  next_steps.md  paper_figure_1.md  paper_notes.md  real_backend.md  release_checklist.md  why_four_states.md
scripts/: check_torch_env.py  generate_ablation_report.py  generate_challenge_table.py  generate_failure_figure.py  run_torch_compare.sh  run_torch_release_bundle.sh  run_torch_smoke.sh
tests/: test_backend_factory.py  test_cli.py  test_failure_runner.py  test_progress.py  test_proposals.py  test_public_surface.py  test_runner.py  test_scenarios.py  test_scoring.py  test_wisdom.py
(+22 files in other folders)
