[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chatuskoti-evals"
version = "0.1.0"
description = "Benchmark-specific calibrated evaluation framework for Chatuskoti-style research outcomes."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["chatuskoti_evals*"]
