[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chatuskoti-evals"
version = "1.1.0"
description = "Chatuskoti Eval Framework for benchmark-specific research outcome evaluation."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["chatuskoti_evals*"]
